todo-app:save and load,  local storage

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <input type="text" id="newDescription">
+    <input id="input" type="text" id="newDescription">
     <button id="button">Add To-Do</button>
 
     <ul id="list">
