todo-app: add filtering feature

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -9,17 +9,30 @@
 </head>
 
 <body>
-    <input id="input" type="text" id="newDescription">
-    <button id="button">Add To-Do</button>
 
-    <ul id="list">
-        <li>was</li>
-        <li>das</li>
-    </ul>
+    <forms>
+        <p>Please select your favorite Web language:</p>
+          <input type="radio" id="all" name="la" value="all">
+          <label for="all">all todos</label><br>
+          <input type="radio" id="open" name="la" value="open">
+          <label for="open">open todos</label><br>
+          <input type="radio" id="done" name="la" value="done">
+          <label for="done">done todos</label>
 
-    <button>fbdbr</button>
 
-    <script src="script.js"></script>
+        </form>
+
+        <input id="input" type="text" id="newDescription">
+        <button id="button">Add To-Do</button>
+
+        <ul id="list">
+            <li>was</li>
+            <li>das</li>
+        </ul>
+
+        <button>fbdbr</button>
+
+        <script src="script.js"></script>
 </body>
 
 </html>
