hangman: beginning script

--- a/hangman/index.html
+++ b/hangman/index.html
@@ -24,8 +24,8 @@
 
 
 
-        <footer>
-            <button class="letter">A</button>
+        <keyboard>
+            <button id="a" class="letter">A</button>
             <button class="letter">B</button>
             <button class="letter">C</button>
             <button class="letter">D</button>
@@ -51,7 +51,7 @@
             <button class="letter">X</button>
             <button class="letter">Y</button>
             <button class="letter">Z</button>
-        </footer>
+        </keyboard>
     </main>
 
 </body>
