--- a/memory/index.html
+++ b/memory/index.html
@@ -11,13 +11,13 @@
 <body>
     <main>
 
-        <div class="flip-card card is-flipped" id="card">
+        <div class="flip-card card " id="card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <p>1</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>1</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
                     <p>2</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>2</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     <p>3</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>3</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -50,7 +50,7 @@
                     <p>4</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>4</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -61,7 +61,7 @@
                     <p>5</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>5</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                     <p>6</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>6</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                     <p>7</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>7</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                     <p>8</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>8</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
                     <p>9</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>9</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
                     <p>10</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>10</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
                     <p>11</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>11</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
                     <p>12</p>
                 </div>
                 <div class="flip-card-back">
-                    <p>12</p>
+                    <img src="" alt="">
                 </div>
             </div>
         </div>
